# chromiumoxide

./: CHANGELOG.md  Cargo.toml
chromiumoxide_cdp/: Cargo.toml
chromiumoxide_cdp/pdl/: browser_protocol.pdl
chromiumoxide_cdp/src/: lib.rs
chromiumoxide_cdp/tests/: generate.rs
chromiumoxide_fetcher/: Cargo.toml
chromiumoxide_fetcher/src/runtime/zip/: mod.rs  zip8.rs  zip_0_6.rs  zip_8.rs
chromiumoxide_pdl/: Cargo.toml
chromiumoxide_pdl/src/pdl/: mod.rs
chromiumoxide_types/: Cargo.toml
src/: async_process.rs  conn.rs  element.rs  page.rs
src/browser/: config.rs
