[package]
name = "chromiumoxide_cdp"
version = "0.9.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2024"
rust-version = "1.85"
description = "Contains all the generated types for chromiumoxide"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mattsse/chromiumoxide"
repository = "https://github.com/mattsse/chromiumoxide"
readme = "../README.md"
include = ["src/**/*", "*.pdl", "LICENSE-*"]


[dev-dependencies]
chromiumoxide_pdl = { path = "../chromiumoxide_pdl", version = "0.9" }
reqwest = { version = "0.13", features = ["rustls"], default-features = false }
tempfile = "3.10"
tokio = { version = "1", features = ["rt", "fs", "process", "macros"] }

[dependencies]
chromiumoxide_pdl = { path = "../chromiumoxide_pdl", version = "0.9" }
chromiumoxide_types = { path = "../chromiumoxide_types", version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
