[package]
name = "chromiumoxide_fetcher"
version = "0.8.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Contains a chromium fetcher"
homepage = "https://github.com/mattsse/chromiumoxide"
repository = "https://github.com/mattsse/chromiumoxide"
readme = "../README.md"
include = ["src/**/*", "LICENSE-*"]

[lib]
name = "chromiumoxide_fetcher"
path = "src/lib.rs"
doctest = false

[[test]]
name = "chromiumoxide_fetcher"
path = "tests/lib.rs"
harness = true

[dev-dependencies]
reqwest = { version = "0.13", features = ["rustls"], default-features = false }
tokio = { version = "1", features = ["rt", "fs", "process", "macros"] }

[dependencies]
thiserror = "2"
anyhow = "1"
directories = "6"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
zip-0_2 = { package = "zip", version = "0.6", default-features = false, features = [
  "deflate",
], optional = true }
zip-8 = { package = "zip", version = "8", default-features = false, features = [
  "deflate-flate2-zlib-rs",
], optional = true }
tokio = { version = "1", features = ["fs", "io-util"] }
reqwest = { version = "0.13", default-features = false, features = ["json"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-version = "0.1"

[features]
default = ["rustls", "zip-8"]

rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
